--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,12 @@ body , html {
 
 .border-1 {
 	border-radius: 25px;
-	border-width: 0;
+	border-width: 0px;
 }
 
 .border-2 {
 	border-radius: 90px;
-	border-width: 0;
+	border-width: 0px;
 }
 
 .sizeIcon {
@@ -47,4 +47,12 @@ body , html {
 
 .text-white {
 	color: white;
+}
+
+.menu:hover {
+	cursor: pointer;
+}
+
+.menu {
+	z-index: 3;
 }
