Page création & modification d'un médecin + fix iconnes & liens pour admin

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,3 +79,13 @@ input {
 .h-50 {
 	max-height: 450px;
 }
+
+
+.enable-flex {
+	display: flex;
+}
+
+.input-grow {
+	flex-grow: 1;
+	text-align: center;
+}
